modifying existing book collection CRUD functionality, minus author interaction
