# swagger.json
@@ -54,6 +54,76 @@
             "description": "Internal server error"
           }
         }
+      },
+      "post": {
+        "summary": "Create a new book",
+        "tags": [
+          "Books"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "id": {
+                    "type": "string",
+                    "example": "b2"
+                  },
+                  "authorId": {
+                    "type": "string",
+                    "example": "a1"
+                  },
+                  "title": {
+                    "type": "string",
+                    "example": "Brave New World"
+                  },
+                  "publicationDate": {
+                    "type": "string",
+                    "example": "1932-01-01"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "The created book",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "example": "b2"
+                    },
+                    "authorId": {
+                      "type": "string",
+                      "example": "a1"
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": "Brave New World"
+                    },
+                    "publicationDate": {
+                      "type": "string",
+                      "example": "1932-01-01"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid book data or book with this ID already exists"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
       }
     },
     "/books/{id}": {
@@ -102,6 +172,116 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "put": {
+        "summary": "Update a book by ID",
+        "tags": [
+          "Books"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "The ID of the book",
+            "schema": {
+              "type": "string"
+            },
+            "example": "b1"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "authorId": {
+                    "type": "string",
+                    "example": "a1"
+                  },
+                  "title": {
+                    "type": "string",
+                    "example": 1984
+                  },
+                  "publicationDate": {
+                    "type": "string",
+                    "example": "1949-06-08"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The updated book",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "example": "b1"
+                    },
+                    "authorId": {
+                      "type": "string",
+                      "example": "a1"
+                    },
+                    "title": {
+                      "type": "string",
+                      "example": 1984
+                    },
+                    "publicationDate": {
+                      "type": "string",
+                      "example": "1949-06-08"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid book data"
+          },
+          "404": {
+            "description": "Book not found"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      },
+      "delete": {
+        "summary": "Delete a book by ID",
+        "tags": [
+          "Books"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "description": "The ID of the book",
+            "schema": {
+              "type": "string"
+            },
+            "example": "b1"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Book deleted successfully"
           },
           "404": {
             "description": "Book not found"
